# Visi-Agent

./: .dockerignore  .gitignore  Dockerfile  ReadMe.md  euninfo.txt  main.py  pyproject.toml  pytest.ini  requirements.txt
data/cache/: cache_backup.json
data/frames/: 59dd53dc-6916-4706-8ca1-6328b852bbdb.json  fb6c2b7c-dd7d-4d11-8f18-7a50b211a364.json
data/metadata/: 0c93f7a1-6035-4e46-88c7-c9a2586b111d.json  20efbc91-cbb5-4696-9e70-95782ea02188.json  2483dd66-6860-4f81-9009-88ae320bd9c9.json  4b4a5781-7f1b-4600-af54-a455ab39d363.json  4cb5579c-0c3c-451b-9436-2526731a12fc.json  52bfd035-d5fb-4b79-b881-cda31d350049.json  531061c9-e4d5-4fe1-ab2e-fc5bbfe0f86b.json  550a2a9a-486c-4658-a3ab-7fc966a036a3.json  5736409e-7e06-46ff-a1ae-36e89a41208c.json  59dd53dc-6916-4706-8ca1-6328b852bbdb.json  6bc18453-f881-4ffa-a4a9-5597f36f70ec.json  8bf5d8af-aa6d-4ae1-818a-68ac6012b58d.json  8f71e1a8-86f8-43f5-b7fc-180201cbfdbb.json  c6358342-4fcb-4009-a9e5-7baba0ef0618.json  e49c04db-9b6a-468f-ae52-8be3b58fd4da.json
data/prompts/: video_qa_prompt_template.json
data/summaries/: 52bfd035-d5fb-4b79-b881-cda31d350049.txt
data/transcripts/: 52bfd035-d5fb-4b79-b881-cda31d350049.json  c6358342-4fcb-4009-a9e5-7baba0ef0618.json  c938632f-277c-4434-a553-d42533d3197d.json  f207db20-bcfc-43df-a68a-1ec05070940d.json
doc/: ReadMe.md  ReadMe2.md  doc.md  requirements.txt
frontend/: app.py
scripts/: clean_env.sh  run.sh  run_api.sh  run_redis.sh  run_tests.sh
src/: main.py
tests/: conftest.py
visi_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+92 files in other folders)
